--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.3.3"
+    "nuxt": "^3.3.3",
+    "postcss-mixins": "^9.0.4",
+    "postcss-nested": "^6.0.0",
+    "postcss-preset-env": "^7.8.2"
+  },
+  "dependencies": {
+    "@vueuse/core": "^9.13.0"
   }
 }
