--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "postcss-preset-env": "^7.8.2"
   },
   "dependencies": {
-    "@vueuse/core": "^9.13.0"
+    "@vueuse/core": "^9.13.0",
+    "feather-icons": "4",
+    "vue-feather": "2"
   }
 }
