Implement wallet connect; Add reveal flow

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 NUXT_PUBLIC_OPEPEN_AI_API=http://localhost:3333
 NUXT_PUBLIC_OPEPEN_API=http://localhost:3333
+
+NUXT_PUBLIC_RPC=
+NUXT_PUBLIC_ALCHEMY=
+NUXT_PUBLIC_CHAIN_NAME=mainnet
+NUXT_PUBLIC_CHAIN_ID=1
