--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
   "dependencies": {
     "@vueuse/components": "^9.13.0",
     "@vueuse/core": "^9.13.0",
+    "buffer": "^6.0.3",
     "feather-icons": "4",
     "luxon": "^3.3.0",
+    "ethers": "^5.7.2",
+    "vagmi": "^0.1.20",
     "vue-feather": "2"
+  },
+  "resolutions": {
+    "vue-query": "2.0.0-beta.12"
   }
 }
