--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@types/events": "^3.0.0",
+    "@types/node": "^18.15.13",
     "nuxt": "^3.3.3",
     "postcss-mixins": "^9.0.4",
     "postcss-nested": "^6.0.0",
@@ -18,9 +20,10 @@
     "@vueuse/components": "^9.13.0",
     "@vueuse/core": "^9.13.0",
     "buffer": "^6.0.3",
+    "ethers": "^5.7.2",
+    "events": "^3.3.0",
     "feather-icons": "4",
     "luxon": "^3.3.0",
-    "ethers": "^5.7.2",
     "vagmi": "^0.1.20",
     "vue-feather": "2"
   },
