Rework wallet integration

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ NUXT_PUBLIC_RPC=
 NUXT_PUBLIC_ALCHEMY=
 NUXT_PUBLIC_CHAIN_NAME=mainnet
 NUXT_PUBLIC_CHAIN_ID=1
+
+NUXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
