--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   "dependencies": {
     "@vueuse/components": "^9.13.0",
     "@vueuse/core": "^9.13.0",
+    "@wagmi/core": "^1.3.2",
     "buffer": "^6.0.3",
     "delegatecash": "^0.4.1",
     "ethers": "^5.7.2",
     "events": "^3.3.0",
     "feather-icons": "4",
     "luxon": "^3.3.0",
-    "vagmi": "^0.1.20",
+    "viem": "^1.2.2",
     "vue-feather": "2"
   },
   "resolutions": {
