--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@types/events": "^3.0.0",
     "@types/node": "^18.15.13",
-    "nuxt": "^3.3.3",
+    "nuxt": "^3.6.5",
     "postcss-mixins": "^9.0.4",
     "postcss-nested": "^6.0.0",
     "postcss-preset-env": "^7.8.2"
@@ -22,10 +22,12 @@
     "@wagmi/core": "^1.3.2",
     "buffer": "^6.0.3",
     "delegatecash": "^0.4.1",
-    "ethers": "^5.7.2",
+    "ethers5": "npm:ethers@^5.7.2",
+    "ethers6": "npm:ethers",
     "events": "^3.3.0",
     "feather-icons": "4",
     "luxon": "^3.3.0",
+    "siwe": "^2.1.4",
     "viem": "^1.2.2",
     "vue-feather": "2"
   },
