--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@vueuse/components": "^9.13.0",
     "@vueuse/core": "^9.13.0",
     "@wagmi/core": "^1.3.2",
+    "apg-js": "git+https://github.com/runic-inc/apg-js#8bb92ff0780819170fee7e756d26e0562e442983",
     "buffer": "^6.0.3",
     "delegatecash": "^0.4.1",
+    "ethers": "npm:ethers",
     "ethers5": "npm:ethers@^5.7.2",
-    "ethers6": "npm:ethers",
     "events": "^3.3.0",
     "feather-icons": "4",
     "luxon": "^3.3.0",
@@ -32,6 +33,9 @@
     "vue-feather": "2"
   },
   "resolutions": {
-    "vue-query": "2.0.0-beta.12"
+    "vue-query": "2.0.0-beta.12",
+    "apg-js": "git+https://github.com/runic-inc/apg-js#8bb92ff0780819170fee7e756d26e0562e442983",
+    "siwe/**/apg-js": "git+https://github.com/runic-inc/apg-js#8bb92ff0780819170fee7e756d26e0562e442983",
+    "siwe-parser/**/apg-js": "git+https://github.com/runic-inc/apg-js#8bb92ff0780819170fee7e756d26e0562e442983"
   }
 }
