--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "events": "^3.3.0",
     "feather-icons": "4",
     "luxon": "^3.3.0",
+    "opepen-standard": "^1.0.1",
     "siwe": "^2.1.4",
     "viem": "^1.2.2",
     "vue-feather": "2"
