--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-NUXT_PUBLIC_OPEPEN_AI_API=http://localhost:3333
-NUXT_PUBLIC_OPEPEN_API=http://localhost:3333
+NUXT_PUBLIC_OPEPEN_API=http://localhost:3333/v1
 
 NUXT_PUBLIC_RPC=
 NUXT_PUBLIC_ALCHEMY=
