Connect twitter in settings

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NUXT_PUBLIC_OPEPEN_API=http://localhost:3333/v1
+NUXT_PUBLIC_OPEPEN_OAUTH_API=http://localhost:3333/oauth
 
 NUXT_PUBLIC_RPC=
 NUXT_PUBLIC_ALCHEMY=
