--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@wagmi/core": "^1.3.2",
     "apg-js": "git+https://github.com/runic-inc/apg-js#8bb92ff0780819170fee7e756d26e0562e442983",
     "buffer": "^6.0.3",
+    "chart.js": "^4.4.2",
     "delegatecash": "^0.4.1",
     "ethers": "npm:ethers",
     "ethers5": "npm:ethers@^5.7.2",
@@ -34,6 +35,7 @@
     "siwe": "^2.1.4",
     "sortablejs": "^1.15.0",
     "viem": "^1.2.2",
+    "vue-chartjs": "^5.3.1",
     "vue-feather": "2"
   },
   "resolutions": {
