--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --port 6969",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -40,7 +40,8 @@
     "sortablejs": "^1.15.0",
     "viem": "^1.2.2",
     "vue-chartjs": "^5.3.1",
-    "vue-feather": "2"
+    "vue-feather": "2",
+    "vue-virtual-scroller": "^2.0.0-beta.8"
   },
   "resolutions": {
     "vue-query": "2.0.0-beta.12",
