--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ethers5": "npm:ethers@^5.7.2",
     "events": "^3.3.0",
     "feather-icons": "4",
+    "hls.js": "^1.5.8",
     "html2canvas": "^1.4.1",
     "luxon": "^3.3.0",
     "opepen-standard": "^1.0.1",
