VVIP code mirror

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "apg-js": "git+https://github.com/runic-inc/apg-js#8bb92ff0780819170fee7e756d26e0562e442983",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.2",
+    "codemirror": ">=5.64.0 <6",
+    "codemirror-editor-vue3": "^2.5.8",
     "ethers": "npm:ethers",
     "ethers5": "npm:ethers@^5.7.2",
     "events": "^3.3.0",
