--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@wagmi/core": "^1.3.2",
     "apg-js": "git+https://github.com/runic-inc/apg-js#8bb92ff0780819170fee7e756d26e0562e442983",
     "buffer": "^6.0.3",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.2",
     "codemirror": ">=5.64.0 <6",
     "codemirror-editor-vue3": "^2.5.8",
