--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
     "apg-js": "git+https://github.com/runic-inc/apg-js#8bb92ff0780819170fee7e756d26e0562e442983",
     "siwe/**/apg-js": "git+https://github.com/runic-inc/apg-js#8bb92ff0780819170fee7e756d26e0562e442983",
     "siwe-parser/**/apg-js": "git+https://github.com/runic-inc/apg-js#8bb92ff0780819170fee7e756d26e0562e442983"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
