--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   },
   "dependencies": {
     "@delegatexyz/sdk": "^0.5.2",
-    "@vueuse/components": "^9.13.0",
-    "@vueuse/core": "^9.13.0",
+    "@tresjs/cientos": "^4.0.3",
+    "@tresjs/core": "^4.3.1",
+    "@tresjs/nuxt": "^3.0.7",
+    "@vueuse/components": "^12.0.0",
+    "@vueuse/core": "^12.0.0",
     "@vueuse/integrations": "^10.5.0",
     "@wagmi/core": "^1.3.2",
     "apg-js": "git+https://github.com/runic-inc/apg-js#8bb92ff0780819170fee7e756d26e0562e442983",
@@ -42,6 +45,7 @@
     "opepen-standard": "^1.0.1",
     "siwe": "^2.1.4",
     "sortablejs": "^1.15.0",
+    "three": "^0.171.0",
     "viem": "^1.2.2",
     "vue-chartjs": "^5.3.1",
     "vue-feather": "2",
