--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxi build",
-    "dev": "nuxi dev --port 6969",
+    "dev": "nuxi dev --port 6996",
     "generate": "nuxi generate",
     "preview": "nuxi preview",
     "postinstall": "nuxi prepare"
@@ -17,7 +17,7 @@
     "@tresjs/cientos": "^4.0.3",
     "@tresjs/core": "^4.3.1",
     "@tresjs/nuxt": "^3.0.7",
-    "@visualizevalue/vveb3-layer": "latest",
+    "@visualizevalue/vveb3-layer": "^0.0.8",
     "@vite-pwa/assets-generator": "^0.2.6",
     "@vite-pwa/nuxt": "^0.10.6",
     "@vueuse/integrations": "^12.0.0",
