--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,26 @@
-NUXT_PUBLIC_OPEPEN_API=http://localhost:3333/v1
-NUXT_PUBLIC_OPEPEN_OAUTH_API=http://localhost:3333/oauth
+# =========================
+#           BASE
+# =========================
+NITRO_PRESET=node_cluster
+NUXT_DEVTOOLS=true
+NUXT_SSR=true
+NUXT_PUBLIC_DOMAIN=localhost
+NUXT_PUBLIC_TITLE=Opepen
+NUXT_PUBLIC_DESCRIPTION="Consensus is temporary"
 
-NUXT_PUBLIC_RPC=
-NUXT_PUBLIC_ALCHEMY=
-NUXT_PUBLIC_CHAIN_NAME=mainnet
+# =========================
+#         MAINNET
+# =========================
+NUXT_PUBLIC_BLOCK_EXPLORER=https://etherscan.io
 NUXT_PUBLIC_CHAIN_ID=1
-
+NUXT_PUBLIC_RPC1=https://eth.llamarpc.com
+NUXT_PUBLIC_RPC2=https://eth.drpc.org
+NUXT_PUBLIC_RPC3=https://1rpc.io/eth
 NUXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
+
+NUXT_PUBLIC_OPEPEN_API=https://api.opepen.art/v1
+NUXT_PUBLIC_OPEPEN_OAUTH_API=https://api.opepen.art/oauth
+
+# NUXT_PUBLIC_OPEPEN_API=http://127.0.0.1:3333/v1
+# NUXT_PUBLIC_OPEPEN_OAUTH_API=http://localhost:3333/oauth
+
