--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NUXT_DEVTOOLS=true
 NUXT_SSR=true
 NUXT_PUBLIC_DOMAIN=localhost
 NUXT_PUBLIC_TITLE=Opepen
-NUXT_PUBLIC_DESCRIPTION="Consensus is temporary"
+NUXT_PUBLIC_DESCRIPTION=Consensus is temporary
 
 # =========================
 #         MAINNET
