--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@visualizevalue/vveb3-layer": "^0.0.38",
     "@vite-pwa/assets-generator": "^0.2.6",
     "@vite-pwa/nuxt": "^0.10.6",
+    "@vueuse/core": "^12.0.0",
     "@vueuse/integrations": "^12.0.0",
     "feather-icons": "4",
     "gsap": "^3.12.7",
