--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@vite-pwa/nuxt": "^0.10.6",
     "@vueuse/core": "^12.0.0",
     "@vueuse/integrations": "^12.0.0",
+    "chart.js": "^4.4.8",
     "feather-icons": "4",
     "gsap": "^3.12.7",
     "opepen-standard": "^1.0.1",
     "siwe": "^2.3.2",
     "sortablejs": "^1.15.0",
     "three": "^0.171.0",
+    "vue-chartjs": "^5.3.2",
     "vue-feather": "2",
     "vue-virtual-scroller": "^2.0.0-beta.8"
   },
